# UNP

./: .gitignore  Make.defines.in  Makefile  Makefile.am  configure.ac
echo/: Makefile  Makefile.am  echo_experiment.txt  echo_srv  echo_srv.c  echo_srv_poll  echo_srv_poll.c  echo_srv_select  echo_srv_select.c  echocli  echocli.c  echocli_multi  echocli_multi.c  echocli_multiwrite  echocli_multiwrite.c  echocli_simple  echocli_simple.c  echocli_tester  echocli_tester.c  head_results.txt  randomfile
hostnames/: Makefile.am  hostent.c
include/: utils.h  utils.h~
inetd/: Makefile.am  daytimecpsrv2.c
intro/: Makefile  Makefile.am  byteorder  byteorder.c  byteorder.c~  daytimecli  daytimecli.c  daytimesrv  daytimesrv.c  daytimesrv.c~  index.html
lib/: Makefile  Makefile.am  echo_srv_select.c  errors.c  readline.c  readn.c  signal.c  sock_ntop.c  str_echo.c  strcliselect01.c  writen.c
misc/: Makefile.am  portscan.c
udpcliserv/: Makefile  Makefile.am  dgcliloop1  dgcliloop1.c  dgecholoop1  dgecholoop1.c  dgecholoop2  dgecholoop2.c  udpcli01  udpcli01.c  udpsendpacket  udpsendpacket.c  udpserv01  udpserv01.c  udpservselect01.c
